--- a/Error-Helper/Changes
+++ b/Error-Helper/Changes
@@ -1,5 +1,5 @@
 Revision history for Error-Helper
 
-0.01    Date/time
-        First version, released on an unsuspecting world.
+0.0.0	2011-08-12/13:40
+	-Initial release.
 
