add warnString and bump to 0.1.0
git-svn-id: svn://127.0.0.1/Perl/Error::Helper/trunk@515 0c1c3402-1be1-de11-8092-0022686faf23

--- a/Error-Helper/Changes
+++ b/Error-Helper/Changes
@@ -1,5 +1,8 @@
 Revision history for Error-Helper
 
+0.1.0	2011-08-18/01:00
+		-Add 'warnString'. 
+
 0.0.0	2011-08-12/13:40
-	-Initial release.
+		-Initial release.
 
