--- a/Changes
+++ b/Changes
@@ -1,7 +1,9 @@
 Revision history for Error-Helper
 
-2.0.0	2023-12-23/?
-		- 
+2.0.0	2023-12-03/13:45
+		-adds fatal errors to allow easy usage with eval
+		-errors can all be fatal, by error code, or by error flag
+		-perrors are fatal by default
 
 1.0.0	 2012-06-15/17:
 		 -Add error flags.
