note the changes

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Error-Helper
 
+2.1.0	2023-12-10/15:30
+		 - Add shared variables for getting error info when a initiator methode dies and
+		does return a blessed object.
+
 2.0.0	2023-12-03/20:45
 		-adds fatal errors to allow easy usage with eval
 		-errors can all be fatal, by error code, or by error flag
